<<<<<<< HEAD:Scenes/Levels/map2.tscn
[gd_scene load_steps=12 format=3 uid="uid://bebj1py6ix7yu"]

[ext_resource type="Script" path="res://Scripts/GameEntities/game_entities.gd" id="1_gdflb"]
[ext_resource type="PackedScene" uid="uid://c1qx1q2ylej3m" path="res://Scenes/Objects/Player/player.tscn" id="2_khspm"]
[ext_resource type="PackedScene" uid="uid://chhsxxwlq64bs" path="res://Scenes/Objects/Enemy/enemy.tscn" id="3_12rc8"]
[ext_resource type="PackedScene" uid="uid://dt2kf02le6ak" path="res://Scenes/Objects/Danmaku/danmaku.tscn" id="4_nc33w"]
[ext_resource type="PackedScene" uid="uid://cyb7mfpr6ll6d" path="res://Scenes/Objects/PItem/p_item.tscn" id="5_n042s"]
[ext_resource type="PackedScene" uid="uid://c67qavicmv4cu" path="res://Scenes/Objects/Chest/chest.tscn" id="6_g5432"]
[ext_resource type="Texture2D" uid="uid://ipcdlx5fdlos" path="res://Assets/Sprites/Visual effect/dragonjewel.png" id="7_csnic"]
[ext_resource type="PackedScene" uid="uid://d2sasf8vv0m84" path="res://Scenes/Objects/Door/door.tscn" id="8_ko0x3"]
[ext_resource type="PackedScene" uid="uid://ctluf3yg2l1l0" path="res://Scenes/Objects/Alarm/alarm.tscn" id="9_njg5b"]
[ext_resource type="Script" path="res://Scripts/GameState/game_state.gd" id="10_1a128"]
[ext_resource type="TileSet" uid="uid://bhxmfe0msahhf" path="res://Resources/Tileset/tileset.tres" id="11_8stnh"]
=======
[gd_scene load_steps=13 format=3 uid="uid://cedveobf44rv7"]

[ext_resource type="PackedScene" uid="uid://c1qx1q2ylej3m" path="res://Scenes/Objects/Player/player.tscn" id="1_ifevs"]
[ext_resource type="Script" path="res://Scripts/GameEntities/game_entities.gd" id="1_rh6ip"]
[ext_resource type="PackedScene" uid="uid://chhsxxwlq64bs" path="res://Scenes/Objects/Enemy/enemy.tscn" id="2_xe5fl"]
[ext_resource type="PackedScene" uid="uid://dt2kf02le6ak" path="res://Scenes/Objects/Danmaku/danmaku.tscn" id="3_7x6lx"]
[ext_resource type="TileSet" uid="uid://bhxmfe0msahhf" path="res://Resources/Tileset/tileset.tres" id="3_xmtiq"]
[ext_resource type="PackedScene" uid="uid://cyb7mfpr6ll6d" path="res://Scenes/Objects/PItem/p_item.tscn" id="4_4s0vl"]
[ext_resource type="Script" path="res://Scripts/GameState/game_state.gd" id="5_05ol6"]
[ext_resource type="PackedScene" uid="uid://c67qavicmv4cu" path="res://Scenes/Objects/Chest/chest.tscn" id="6_0xhgl"]
[ext_resource type="Texture2D" uid="uid://brycb6r6ppqcb" path="res://Assets/Sprites/Visual effect/dragonjewel.png" id="7_3fwf5"]
[ext_resource type="PackedScene" uid="uid://d2sasf8vv0m84" path="res://Scenes/Objects/Door/door.tscn" id="8_78w64"]
[ext_resource type="PackedScene" uid="uid://ctluf3yg2l1l0" path="res://Scenes/Objects/Alarm/alarm.tscn" id="9_grg02"]
[ext_resource type="PackedScene" uid="uid://dxi0fnvj5y78i" path="res://Scenes/Overlay/HUD.tscn" id="11_8wmpp"]
>>>>>>> 3ee960f427ed252a16372b07099077d2cefc974a:Scenes/Levels/level_template.tscn

[node name="Main" type="Node2D"]

[node name="GameEntities" type="Node" parent="."]
script = ExtResource("1_gdflb")

[node name="Player" parent="GameEntities" groups=["Player"] instance=ExtResource("2_khspm")]

[node name="Enemy" parent="GameEntities" node_paths=PackedStringArray("designated_alarm") instance=ExtResource("3_12rc8")]
position = Vector2(-403, 128)
designated_to_alarm = true
designated_alarm = NodePath("../Alarm")

[node name="Enemy2" parent="GameEntities" node_paths=PackedStringArray("designated_alarm") instance=ExtResource("3_12rc8")]
position = Vector2(287, -41)
designated_alarm = NodePath("../Alarm")

[node name="Danmaku" parent="GameEntities" instance=ExtResource("4_nc33w")]
position = Vector2(-54, -433)
damage = 1

[node name="PItem" parent="GameEntities" instance=ExtResource("5_n042s")]

[node name="Chest" parent="GameEntities" instance=ExtResource("6_g5432")]
position = Vector2(237, 187)
is_true_chest = true
treasure_sprite = ExtResource("7_csnic")

[node name="Door" parent="GameEntities" instance=ExtResource("8_ko0x3")]
position = Vector2(-8.99998, 151)
rotation = -1.67552

[node name="Alarm" parent="GameEntities" instance=ExtResource("9_njg5b")]
position = Vector2(-381, -187)

[node name="GameState" type="Node" parent="."]
script = ExtResource("10_1a128")

[node name="Utils" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("11_8wmpp")]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(4, 4)
tile_set = ExtResource("11_8stnh")
format = 2
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(-131077, 65538, 0, -65541, 65538, 1, -5, 65538, 1, -4, 131074, 1, -3, 131074, 1, 65533, 131074, 2, 65534, 196610, 2, -2, 196610, 1, -65538, 196610, 1, -65540, 131074, 1, -131076, 131074, 0, -131075, 131074, 0, -65539, 131074, 1, 65532, 131074, 2, 65531, 65538, 2, -131074, 196610, 0, 196601, 2, 0, 196602, 2, 0, 196603, 2, 0, 196604, 2, 0, 196605, 2, 0, 196606, 2, 0, 131070, 2, 0, 131069, 2, 0, 131068, 2, 0, 131067, 2, 0, 131066, 2, 0, 131065, 2, 0, 65529, 2, 0, -7, 2, 0, -6, 2, 0, 65530, 2, 0)
layer_1/name = "static_objs"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(196613, 262146, 65536, 131077, 327682, 196608, 65541, 327682, 196608, 5, 327682, 196608, -65531, 327682, 196608, -131067, 327682, 196608, -196603, 327682, 196608, -262139, 262146, 131072, 196612, 327682, 65536, 131076, 458754, 0, 65540, 458754, 0, 4, 458754, 0, -65532, 458754, 0, -131068, 458754, 0, -196604, 458754, 0, -262140, 327682, 0, 196611, 327682, 65536, 131075, 458754, 0, 65539, 458754, 0, 3, 458754, 0, -65533, 458754, 0, -131069, 458754, 0, -196605, 458754, 0, -262141, 327682, 0, 196610, 327682, 65536, 131074, 458754, 0, 65538, 458754, 0, 2, 458754, 0, -65534, 458754, 0, -131070, 458754, 0, -196606, 458754, 0, -262142, 327682, 0, 196609, 327682, 65536, 131073, 458754, 0, 65537, 458754, 0, 1, 458754, 0, -65535, 458754, 0, -131071, 458754, 0, -196607, 458754, 0, -262143, 327682, 0, 196608, 327682, 65536, 131072, 458754, 0, 65536, 458754, 0, 0, 458754, 0, -65536, 458754, 0, -131072, 458754, 0, -196608, 458754, 0, -262144, 327682, 0, 262143, 327682, 65536, 196607, 458754, 0, 131071, 458754, 0, 65535, 393218, 0, -1, 327682, 131072, -65537, 327682, 131072, -131073, 327682, 131072, -196609, 262146, 0, 262142, 327682, 65536, 196606, 458754, 0, 131070, 458754, 0, 65534, 327682, 0, -2, 262146, 1, -65538, 262146, 1, -131074, 262146, 1, -196610, 262146, 1, 262141, 327682, 65536, 196605, 458754, 0, 131069, 458754, 0, 65533, 393218, 65536, -3, 327682, 196608, -65539, 327682, 196608, -131075, 327682, 196608, -196611, 262146, 131072, 262140, 327682, 65536, 196604, 458754, 0, 131068, 458754, 0, 65532, 458754, 0, -4, 458754, 0, -65540, 458754, 0, -131076, 458754, 0, -196612, 327682, 0, 262139, 327682, 65536, 196603, 458754, 0, 131067, 458754, 0, 65531, 458754, 0, -5, 458754, 0, -65541, 458754, 0, -131077, 458754, 0, -196613, 327682, 0, 262138, 327682, 65536, 196602, 458754, 0, 131066, 458754, 0, 65530, 458754, 0, -6, 458754, 0, -65542, 458754, 0, -131078, 458754, 0, -196614, 327682, 0, 262137, 327682, 65536, 196601, 458754, 0, 131065, 458754, 0, 65529, 458754, 0, -7, 458754, 0, -65543, 458754, 0, -131079, 458754, 0, -196615, 327682, 0, 262136, 262146, 196608, 196600, 327682, 131072, 131064, 327682, 131072, 65528, 327682, 131072, -8, 327682, 131072, -65544, 327682, 131072, -131080, 327682, 131072, -196616, 262146, 0)

[connection signal="stage_lose" from="GameState" to="GameState" method="set_lose"]
[connection signal="stage_won" from="GameState" to="GameState" method="set_won"]
